2005-05-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/printf_large.c: fixed bug 1193299
	* support/regression/tests/bug1057979.c: added test %3.3s

2005-05-15 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/include/mcs51/8051.h,
	* device/include/mcs51/8052.h: made parseable with lint
	* device/include/mcs51/lint.h: added include file for (sp)lint
	* doc/sdccman.lyx: added doc about use of splint (syntax checking tool)
	* doc/cdbfileformat.lyx, 
	* doc/test_suite_spec.lyx: hardcoded date to the date of last text change

2005-05-14 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/Makefile.common.in: add --optimize-df to OPT_FLAGS
	* device/lib/pic16/libc/stdlib/itoa.c (new)
	* device/lib/pic16/libc/stdlib/Makefile: have itoa.c built
	* device/lib/pic16/libio/Makefile: exclude subdir according to
	  ${subdir}.ignore for certain PICs (lacking e.g. i2c)
	* device/lib/pic16/libio/i2c.ignore (new): pic18f1220 has no I2C support
	* src/pic16/gen.c (genFunction): prevent annoying warning
	* src/pic16/pcode.c: renamed stack_t to dynstack_t to prevent
	  nameclashes on BeOS
	* support/cpp2/cppmain.c (cpp_output_string): new
	* support/cpp2/cpplib.c (_cpp_do__Pragma): fixed _Pragma(""),
	  fixes bug 1116802

2005-05-13 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c (linkEdit): fixed bug 1195202

2005-05-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* .version: changed to version 2.5.1; back to bleeding edge development

2005-05-11 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx doc/cdbfileformat.lyx doc/test_suite_spec.lyx:
	  generate PDF version 1.3 documents

2005-05-07 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* .version: changed to version 2.5.0

2005-04-27 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* doc/sdccman.lyx: updated weblinks, index and smaller updates

2005-04-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* doc/sdccman.lyx: changed version 2.5.0, documented --std-c89,