@@ -203,6 +203,7 @@ const char *pic16_pCodeOpType(  pCodeOp *pcop);
 int pic16_my_powof2 (unsigned long num);
 
 void pic16_mov2w (asmop *aop, int offset);
+void pic16_mov2f(asmop *dst, asmop *src, int offset);
 
 void dumpiCode(iCode *lic);
 
